# cpp-otp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in2  Doxyfile
main/: AuthenticationService.cpp  AuthenticationService.h  CMakeLists.txt  Context.cpp  Context.h  Logger.cpp  Logger.h  NowString.cpp  NowString.h  Outbox.cpp  Outbox.h  ProfileDao.cpp  ProfileDao.h  RsaTokenDao.cpp  RsaTokenDao.h  TimeProvider.cpp  TimeProvider.h  WelcomeMail.cpp  WelcomeMail.h  life_cycle.cpp  life_cycle.h  main.cpp
test/: AuthenticationServiceTest.cc  CMakeLists.txt  MockLogger.h  MockOutbox.h  NowStringTest.cpp  SimpleServiceTest.cc  StubProfileDao.cpp  StubProfileDao.h  StubRsaTokenDao.cpp  StubRsaTokenDao.h  StubTimeProvider.h  WelcomeMailTest.cpp  sample_unittest.cc
